--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>GIT337</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Andrew Edlund">
     <meta name="description" content="GIT337 intro">
     <link rel="stylesheet" href="styles.css">
+    <title>GIT337</title>
 </head>
 <body>
     <h1>Hello World</h1>
