--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Andrew Edlund">
     <meta name="description" content="GIT337 intro">
-    <link rel="stylesheet" href="styles.css">
-    <title>GIT337</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Hello World</title>
 </head>
 <body>
     <h1>Hello World</h1>
